# Question_Answering_System

./: README.md  build.sh  pyproject.toml  requirements.txt
demo/: app.py  demo_config.yaml
docs/: installation.md
src/controllers/: __init__.py  data_preparation.py  model_evaluation.py  model_training.py
src/etl/: bert_squad_tokenizer.py  squad_preprocessing.py
src/etl/config/: bm25_preprocessing.yaml
src/machine_learning/config/: bert_config.yaml
src/machine_learning/performance/: bert_evaluation.py  bm25_evaluation.py
src/machine_learning/training/: bert_qa_finetuning.py  bert_qa_layer.py  document_retrieval.py
src/tools/: evaluation_tools.py  general_tools.py  text_tools.py
